--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
 
-        <div id="workGrid">
+        <div id="workGrid" id="overlay" >
             <div id="project1" class="workGridArea">
                 <div class="caseDescription"> 
                     <h4>Case Study 1</h4>
