remove / from images

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <li>User Research</li>
                     <li>Usability Testing</li>
                     <li>User Observation</li>
-                    <img src="/images/divider.png" class=divider>
+                    <img src="images/divider.png" class=divider>
                 </ul>
             </div>
             <div class="flexContainer">
